# smp-backend

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
libs/librespot-c/: CMakeLists.txt  librespot-c.h
libs/librespot-c/src/: channel.c  channel.h  commands.c  commands.h  connection.c  connection.h  crypto.c  crypto.h  librespot-c-internal.h  librespot-c.c
libs/librespot-c/src/proto/: authentication.pb-c.h  keyexchange.pb-c.c  keyexchange.pb-c.h  keyexchange.proto  mercury.pb-c.h  metadata.pb-c.c  metadata.pb-c.h  metadata.proto
libs/librespot-c/tests/: test1.c
src/: cmd.h  config.c  config.h  debug.h  defs.h  hash_table.c  hash_table.h  hostcheck.c  hostcheck.h  http.c  http.h  librespot-util.c  librespot-util.h  main.c  openssl_hostname_validation.c  openssl_hostname_validation.h  spotify.c  spotify.h  util.c  util.h  vec.c  vec.h  worker.c  worker.h
test/: CMakeLists.txt  test.c
